tests/ui/duplicate-struct-source.stderr
error: duplicate #[source] attribute
 --> $DIR/tests/ui/duplicate-struct-source.rs:7:5
  |
7 |     #[source]
  |     ^^^^^^^^^
